[package]
name = "servo-js-fuzz"
version = "0.1.0"
edition = "2024"

[toolchain]
channel = "nightly"

[dependencies]
afl = "*"
servo = { path = "servo/components/servo", package="libservo" }
dpi = { version = "0.1" }
anyhow = "1.0.98"
url = "2.5.4"
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "aws_lc_rs"] }
once_cell = "1.21.3"
